<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">    
    <PreferenceCategory 
        android:title="Buses"
        android:key="pref_buses">
        <CheckBoxPreference
            android:key="pref_view_bus_services"
            android:title="@string/view_bus_services"
            android:summary="@string/view_bus_services_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="Sharing"
        android:key="pref_sharing">
        <CheckBoxPreference
            android:key="pref_share_public"
            android:title="@string/share_public"
            android:summary="@string/share_public_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_share_facebook"
            android:title="@string/share_facebook"
            android:summary="@string/share_facebook_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>