<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".JourneyLegActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure" />

        <TextView
            android:id="@+id/departure_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <TimePicker
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/departure_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/platform"
            android:inputType="textCapCharacters" />

        <TextView
            style="@style/Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival" />

        <TextView
            android:id="@+id/arrival_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <TimePicker
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/arrival_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/platform"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>